# smol-bench

./: .gitignore  LICENSE  README.md  astro.config.mjs  mkdocs.yml  pyproject.toml
docs/: bang-per-bit.md  guide.md  index.md  quality.md  speed.md  tiers.md
docs-landing/: index.html
docs/future/: multi-gpu-ai-inference.md
docs/javascripts/: benchmark_data.js  chart_theme.js  charts_efficiency.js  charts_overview.js  charts_quality.js  charts_speed.js
docs/stylesheets/: extra.css
scripts/: benchmark_quality.py  benchmark_speed.py  convert_and_quantize.sh  download_models.sh  generate_chart_data.py
