[project]
name = "smol-bench"
version = "0.1.0"
description = "Systematic benchmarks of quantized small language models on consumer hardware"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Michael Borck", email = "michael@borck.id.au" },
]
keywords = ["benchmark", "quantization", "small-language-models", "gguf", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
eval = [
    "lm-eval[hf]",
]
docs = [
    "mkdocs-material",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
